@@ -14,6 +14,7 @@ Available options are
   -1/2/3 Generate 1/2/3 binaries for eix-{,diff,update}
   -4  Enable separate tools
   -p  Use pedantic warnings when modifying flags
+  -P  Use pedantic warnings and -Wno-sign-conversion
   -u  Define NOT_FULL_USE
   -s  With sqlite
   -S  Without sqlite
@@ -87,8 +88,9 @@ quickcheck=:
 clear_ccache=false
 stdcxx=''
 debugging=false
+wnosign=false
 OPTIND=1
-while getopts 'qE01234nepusSbBrOQCXyYdc:j:?hH' opt
+while getopts 'qE01234nepPusSbBrOQCXyYdc:j:?hH' opt
 do	case "${opt}" in
 	q) quiet=:;;
 	E) extra_cache=false;;
@@ -100,6 +102,7 @@ do	case "${opt}" in
 	n) earlystop=:;;
 	e) keepenv=:;;
 	p) pedantic=:;;
+	P) wnosign=:;;
 	u) not_full_use=:;;
 	s) configure_extra="${configure_extra} --with-sqlite";;
 	S) configure_extra="${configure_extra} --without-sqlite";;
@@ -146,8 +149,9 @@ then	CFLAGS="`portageq envvar CFLAGS`"
 	export CFLAGS CXXFLAGS LDFLAGS
 	${not_full_use} && CXXFLAGS="${CXXFLAGS} -DNOT_FULL_USE"
 	[ -n "${stdcxx}" ] && CXXFLAGS="${CXXFLAGS} ${stdcxx}"
-	if ${pedantic}
+	if ${pedantic} || ${wnosign}
 	then	configure_extra="${configure_extra} --enable-strong-warnings"
+		${wnosign} && CXXFLAGS="${CXXFLAGS} -Wno-sign-conversion"
 	else	configure_extra="${configure_extra} --enable-warnings"
 		#CXXFLAGS="${CXXFLAGS} -Werror"
 	fi
